--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "express-react-views": "^0.11.0",
     "express-session": "^1.17.1",
+    "jquery": "^3.5.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.10.6",
     "morgan": "^1.10.0",
